Frontend: Fix my hosted challenges page after aligning content and limiting tags (#4632)
* Modified challenge card of My Hosted Challenges Page

* Modified height and aligned the text to left of the challenge card in 'My hosted Challenge page'

* Renamed the classes name

--- a/frontend/src/css/modules/challenge.scss
+++ b/frontend/src/css/modules/challenge.scss
@@ -62,6 +62,9 @@ a.active-challenge {
 .ev-challenge-card {
     height: 425px;
 }
+.ev-hosted-challenge-card {
+    height: 475px;
+}
 
 .ev-dashboard-card {
     min-height: 190px;
@@ -431,6 +434,17 @@ md-select .md-select-value span:first-child:after {
     text-align: center;
   }
 }
+.challenges-container {
+    margin-top: 20px;
+    min-height: 200px;
+
+  .hosted-challenge-card-content {
+    padding: 20px;
+    text-align: left;
+  }
+}
+
+
 
 .github-icon-link {
     margin-right: 10px;
